<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_item_events"/>
        <item
            android:id="@+id/nav_notices"
            android:title="@string/menu_item_notices"/>
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/menu_item_schedule"/>

    </group>
    <group
        android:id="@+id/bottom_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_contact"
            android:title="@string/menu_item_contact"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_item_about"/>

    </group>
</menu>
